<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_edge"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="10dp"
    android:paddingEnd="8dp"
    android:paddingBottom="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="36dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:showIn="@layout/activity_main">


    <View
        android:layout_width="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_height="4dp"
        android:background="@drawable/bottom_sheet_symbol"/>

    <TextView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prediction_settings"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

    <TextView
        android:id="@+id/tvFps"
        android:layout_width="match_parent"
        android:textSize="@dimen/bottom_sheet_text_size"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
        android:textColor="@color/bottom_sheet_text_color"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="match_parent"
        android:textSize="@dimen/bottom_sheet_text_size"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
        android:textColor="@color/bottom_sheet_text_color"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bottom_sheet_text_size"
            android:textColor="@color/bottom_sheet_text_color"
            android:text="@string/tfe_pe_tv_device" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/bottom_sheet_spinner_model_min_width"
            android:spinnerMode="dropdown"
            android:theme="@style/SpinnerWheel"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bottom_sheet_text_size"
            android:textColor="@color/bottom_sheet_text_color"
            android:text="@string/tfe_pe_tv_model" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/bottom_sheet_spinner_model_min_width"
            android:spinnerMode="dropdown"
            android:theme="@style/SpinnerWheel"
            android:layout_alignParentRight="true"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

    <RelativeLayout
        android:id="@+id/vTrackerOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bottom_sheet_text_size"
            android:textColor="@color/bottom_sheet_text_color"
            android:text="@string/tfe_pe_tv_tracking" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnTracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/bottom_sheet_spinner_model_min_width"
            android:spinnerMode="dropdown"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:theme="@style/SpinnerWheel"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/vClassificationOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/bottom_sheet_text_size"
            android:textColor="@color/bottom_sheet_text_color"
            android:layout_toStartOf="@id/swPoseClassification"
            android:text="@string/tfe_pe_tv_pose_classification" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swPoseClassification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvClassificationValue1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bottom_sheet_text_size"
        android:textColor="@color/bottom_sheet_text_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvClassificationValue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bottom_sheet_text_size"
        android:textColor="@color/bottom_sheet_text_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvClassificationValue3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bottom_sheet_text_size"
        android:textColor="@color/bottom_sheet_text_color"
        android:visibility="gone" />
</androidx.appcompat.widget.LinearLayoutCompat>
