
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/bottom_sheet_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/bottom_sheet_padding"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Chevron indicating that the bottom sheet is expandable -->
        <View
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_height="4dp"
            android:background="@drawable/bottom_sheet_symbol"/>

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prediction_settings"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <!-- Inference time row -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inference_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_interence_time"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <TextView
                android:id="@+id/inference_time_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:text="@string/tv_default_inference_time"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#E0E0E0"/>

        <!-- Number of threads adjustment row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/isthreadsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Number of threads"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textColor="@color/bottom_sheet_text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_below="@+id/isthreadsTitle"
                >

                <com.google.android.material.slider.Slider
                    android:id="@+id/isthredsSlider"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:valueFrom="1"
                    android:paddingStart="20dp"
                    app:trackHeight="12dp"
                    android:paddingEnd="30dp"
                    app:thumbColor="@color/white"
                    android:stepSize="1"
                    app:trackColorActive="#8763C4"
                    app:trackColorInactive="#E0E0E0"
                    android:valueTo="4"
                    android:value="2"/>

                <TextView
                    android:id="@+id/is_threads_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:text="2"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#E0E0E0"/>

        <!-- Delegate selection row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_delegate"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:entries="@array/delegate_spinner_titles"
                android:minWidth="@dimen/bottom_sheet_spinner_delegate_min_width"
                android:spinnerMode="dropdown"
                android:theme="@style/BottomSheetSpinnerItemStyle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#E0E0E0"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

            <TextView
                android:text="@string/label_models"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textColor="@color/bottom_sheet_text_color" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/bottom_sheet_spinner_model_min_width"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerWheel"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
